Fix table overflow

--- a/frontend/src/pages/Shop/Shop.scss
+++ b/frontend/src/pages/Shop/Shop.scss
@@ -12,6 +12,10 @@
         width: 550px;
     }
 
+    .table-responsive {
+        overflow-x: hidden;
+    }
+
     .item-info {
         text-align: left;
         .bid-container {
